--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hemo Share</string>
+    <string name="app_name">Blood Link</string>
     <string-array name="bloodGroups">
         <item>AB+</item>
         <item>AB-</item>
